Bug 517899 - Unable to move keyframe in animation timeline
Summary: Unable to move keyframe in animation timeline
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 6.0.0-beta3
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
: 517737 (view as bug list)
Depends on:
Blocks:
 
Reported: 2026-03-20 14:59 UTC by stasiop123qwe@protonmail.com
Modified: 2026-03-27 15:18 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
video showing this issue, Storyboard layer is a regular paint layer, not the storyboard feature (663.94 KB, video/mp4)
2026-03-20 14:59 UTC, stasiop123qwe@protonmail.com
Details

Note You need to log in before you can comment on or make changes to this bug.
Description stasiop123qwe@protonmail.com 2026-03-20 14:59:32 UTC
Created attachment 190849 [details]
video showing this issue, Storyboard layer is a regular paint layer, not the storyboard feature

SUMMARY
Clicking and dragging  to reposition a keyframe onto an empty position results in nothing happening and the keyframe returning to it's original position. Cannot cut/copy keyframes using either Ctrl+C/X or with the right click context menu.

STEPS TO REPRODUCE
1. Create krita project with animated layer
2. Create a blank keyframe, draw on it if you so desire
3. Attempt to move it in any way shape or form

OBSERVED RESULT
While the keyframe does attach to the cursor, dropping it over an empty space, will do nothing.

EXPECTED RESULT
The keyframe gets moved.

SOFTWARE/OS VERSIONS
Linux: 6.19.6-gentoo-dist
Qt Version: 6.10.2
Comment 2 stasiop123qwe@protonmail.com 2026-03-20 15:04:41 UTC
(In reply to Luna from comment #1)
> https://invent.kde.org/graphics/krita/-/merge_requests/2715

cheers, will compile and use this branch for now
Comment 3 wolthera 2026-03-20 15:24:25 UTC
*** Bug 517737 has been marked as a duplicate of this bug. ***
Comment 4 Dmitry Kazakov 2026-03-27 12:54:31 UTC
Git commit b0810e278ae820773303adcd807f81f212a75f1c by Dmitry Kazakov, on behalf of Luna Lovecraft.
Committed on 27/03/2026 at 12:54.
Pushed by dkazakov into branch 'master'.

Fix keyframe copy-pasting on qt6

Qt6 made the size type of a QList configurable, and by default it is a
long long, so the byte alignment of the data was completely broken in
the clipboard.

M  +1    -1    plugins/dockers/animation/KisAnimTimelineFramesModel.cpp

https://invent.kde.org/graphics/krita/-/commit/b0810e278ae820773303adcd807f81f212a75f1c
Comment 5 Dmitry Kazakov 2026-03-27 12:55:08 UTC
Git commit ec7297d7b43749a89ab4f1df09f831426ca261e0 by Dmitry Kazakov.
Committed on 27/03/2026 at 12:55.
Pushed by dkazakov into branch 'krita/6.0'.

Fix keyframe copy-pasting on qt6

Qt6 made the size type of a QList configurable, and by default it is a
long long, so the byte alignment of the data was completely broken in
the clipboard.


(cherry picked from commit b0810e278ae820773303adcd807f81f212a75f1c)

Co-authored-by: Luna Lovecraft <ciubix8514@gmail.com>

M  +1    -1    plugins/dockers/animation/KisAnimTimelineFramesModel.cpp

https://invent.kde.org/graphics/krita/-/commit/ec7297d7b43749a89ab4f1df09f831426ca261e0
Comment 6 Dmitry Kazakov 2026-03-27 15:18:15 UTC
Git commit 7d1aef63019af3f4a8d7a6366d33a7f6187b2024 by Dmitry Kazakov.
Committed on 27/03/2026 at 15:11.
Pushed by dkazakov into branch 'release/6.0.0'.

Fix keyframe copy-pasting on qt6

Qt6 made the size type of a QList configurable, and by default it is a
long long, so the byte alignment of the data was completely broken in
the clipboard.


(cherry picked from commit b0810e278ae820773303adcd807f81f212a75f1c)

Co-authored-by: Luna Lovecraft <ciubix8514@gmail.com>

M  +1    -1    plugins/dockers/animation/KisAnimTimelineFramesModel.cpp

https://invent.kde.org/graphics/krita/-/commit/7d1aef63019af3f4a8d7a6366d33a7f6187b2024