Fix keyframe copy-pasting on qt6

Qt6 made the size type of a QList configurable, and by default it is a
long long, so the byte alignment of the data was completely broken in
the clipboard.

BUG:517899